# CloudAIEngineering

./: README.md  pyproject.toml
fastapi-practice-one/: pyproject.toml
fastapi-practice-one/fastapi_practice_one/: main.py
fastapi-practice-one/tests/: test_main.py
uit-api-class/: pyproject.toml
uit-api-class/uitclass/: main.py
